added test some other modifications